--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             align-items: center;
             justify-content: center;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
+            padding: 20px 0;
             position: relative;
         }
 
@@ -53,7 +55,8 @@
             width: 90%;
             position: relative;
             z-index: 10;
-            backdrop-filter: blur(10px);
+            margin: 20px auto;
+
         }
 
         .emoji {
